@@ -8,6 +8,7 @@ Thanks!
 
 2.1.0.2103
 ----------
+- Fix next unread behavior in sorted article list.
 
 2.1.0.2102
 ----------
